# DRF-TDD-example

./: Pipfile  pyproject.toml
todoapp/todoapp/: settings.py  urls.py
todoapp/todos/: admin.py  apps.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
todoapp/todos/migrations/: 0001_initial.py
todoapp/users/: apps.py  serializers.py  tests.py  urls.py  views.py
